# nes_emulator

./: .gitignore  CMakeLists.txt
src/: cartridge.cc  cartridge.h  cpu.cc  cpu.cc~  cpu.h  cpu.h~  machine.cc  machine.h  opcodes.inl~  opcodes_define.inl  opcodes_define.inl~  opcodes_function.inl  opcodes_function.inl~  ppu.cc  ppu.h  utils.h
test/: cpu_test.cc  cpu_test.cc~  ppu_test.cc
